--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "mongodb": "^6.6.2",
+    "mongoose": "^8.4.0",
     "morgan": "~1.9.1"
   }
 }
